Switch to use StandardCharset.UTF_8 instead of string literal